test_regress/t/t_clocking_bad5.out
%Error: t/t_clocking_bad5.v:27:19: Duplicate declaration of CLOCKING 'ck': '$global_clock'
   27 |   global clocking ogck @(posedge clk);
      |                   ^~~~
        t/t_clocking_bad5.v:23:19: ... Location of original declaration
   23 |   global clocking ck @(posedge clk);
      |                   ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_clocking_bad5.v:31:19: Duplicate declaration of CLOCKING 'ogck': '$global_clock'
   31 |   global clocking ck @(posedge clk);
      |                   ^~
        t/t_clocking_bad5.v:27:19: ... Location of original declaration
   27 |   global clocking ogck @(posedge clk);
      |                   ^~~~
%Error: t/t_clocking_bad5.v:31:19: Duplicate declaration of CLOCKING 'ck': 'ck'
   31 |   global clocking ck @(posedge clk);
      |                   ^~
        t/t_clocking_bad5.v:23:19: ... Location of original declaration
   23 |   global clocking ck @(posedge clk);
      |                   ^~
%Error: t/t_clocking_bad5.v:15:12: Can't find definition of variable: '$global_clock'
   15 |   always @($global_clock) $display;
      |            ^~~~~~~~~~~~~
%Error: Exiting due to
